web-app/css/public.css
body {
  background-color: #FEEBA7;
  font-family: arial, helvetica, sans-serif;
  font-size: 12px;
  color: #333;
  height:800px;
}

#headline {
  display:block;
  color:#993300;
  font-size:26px;
  line-height:35px;
  font-weight:bold;
  margin-left:1px;
}

h1 {
	margin-top:0
}

h2 {
  color:#333333;
  font-size:16px;
  margin:0px 1px;
}

h3 {
  font-size:14px;
  color:#333;
  margin:18px 1px;
  margin-bottom:7px;
}


a img {
	border:0;
}


#body {
  width:955px;
  margin:0 auto;
  padding-top:15px;
  position:relative;
}

.clear {
  clear:both;
}

#secondaryContent {
  width:218px;
  float:left;
}

#sideLogoBox img{
  float:right;
}

#logo {
  padding:10px;
  padding-top:7px;
  padding-left:2px;
  margin-bottom:22px;
}

#nav {
  float:right;
}

#nav a {
  display:block;
  position:relative;
  top:7px;
  font-size:12px;
  color:white;
  font-weight:bold;
  text-align:center;
  text-decoration:none;
  background-image:url(../images/layout/buttons/tab-blue.png);
  height:19px;
  width:107px;
  padding-top:20px;
}

#nav a:hover {
  background-image:url(../images/layout/buttons/tab-blue-hover.png);
}

#nav a#login {
  margin-right:30px;
}

#content {

  margin-top:1px;
  width:732px;
  float:right;
  background:url(../images/layout/content-bg.gif) no-repeat;
  height:533px;
  background-color:#F99F1B;

}

#contentInset {
  background:url(../images/layout/contentInset-bg.gif) no-repeat;
  width:624px;
  padding:15px 10px 0px 10px;
  height:486px;
  margin:0 auto;
  position:relative;
  top:27px;
}

#contentInset p {
  font-size:10px;
  margin-top:0px;
  margin-bottom:13px;
  padding-left:1px;
}

#contentInset strong {
  font-size:12px;
  font-weight:bold;
  color:#333333;
  padding-left:1px;
}

#contentFooter {
  background:url(../images/layout/contentFooter-bg.gif) repeat-x;
  width:728px;
  margin-left:4px;
  position:absolute;
  top:583px;
  height:17px
}

img#contentFooterBL {
  float:left;
  position:relative;
  right:4px;
}

img#contentFooterBR {
  float:right;
  position:relative;
  left:0px;
}

#contentRightEdge {
  background:url(../images/layout/content-left.gif);
}

img#kid {
  position:relative;
  bottom:369px;
  left:514px;
}


#footer {
  position:relative;
  top:12px;
  text-align:right;
  padding-top:0px;
  width:955px;
  clear:both;
  font-size:10px;
  font-weight:bold;
  color:#884700;
  line-height:15px;
}

#footer a {
  font-size:10px;
  font-weight:bold;
  color:#884700;
  text-decoration:none;
  padding-left:4.5px;
  padding-right:4.5px;
}

#footer ul {
  margin-left:200px;
}

#footer li {
  display: inline;
  list-style-type: none;

}


#factoids {
  width:255px;
  height:125px;
  color:white;
  background:url(../images/factoid-bg.gif);
  position:absolute;
  top:380px;
  left:2px;
  margin-top:66px;
}

#factoids strong {
  font-size:14px;
  font-weight:bold;
  margin-left:70px;
  line-height:20px;
}

#factoids p {
 font-size:11px;
 padding:15px;
 padding-top:0px;
 width:230px;
}


#login {


}

.message {
    background: #f3f8fc url(../images/skin/information.png) 8px 50% no-repeat;
    border: 1px solid #b2d1ff;
    color: #006dba;
    margin: 10px 0 5px 0;
    padding: 5px 5px 5px 30px
}

.fancyButton {
	width:135px;
	height:40px;
}

h1 { color:#993300; margin-bottom:0px; }


#SubNav {
	background:url(../images/layout/SubNavBg.png) no-repeat;
    width:255px;
    height:158px;
	padding-top:15px;
	padding-left:20px;
	position:absolute;
	top:208px;
	left:3px;
}

#SubNav h3 {
    margin:0;
	padding:0;
	margin-left:16px;
	color:#993300;
}

#SubNav ul {
    width:190px;
	list-style:url(../images/layout/SubNavBullet.png);
	margin-left:6px;
	margin-top:0;
	padding:0;
}

#SubNav li a {
	color:#653C00;
	text-decoration:none;
	font-weight:bold;
	font-size:12px;
    line-height:18px;

}

/* TABLES */

table {
    border: 1px solid #ccc;
    width: 100%
}
tr {
    border: 0;
}
td, th {
    font: 11px verdana, arial, helvetica, sans-serif;
    line-height: 12px;
    padding: 5px 6px;
    text-align: left;
    vertical-align: top;
}
th {
    background: #fff url(../images/skin/shadow.jpg);
    color: #666;
    font-size: 11px;
    font-weight: bold;
    line-height: 17px;
    padding: 2px 6px;
}
th a:link, th a:visited, th a:hover {
    color: #333;
    display: block;
    font-size: 10px;
    text-decoration: none;
    width: 100%;
}
th.asc a, th.desc a {
    background-position: right;
    background-repeat: no-repeat;
}
th.asc a {
    background-image: url(../images/skin/sorted_asc.gif);
}
th.desc a {
    background-image: url(../images/skin/sorted_desc.gif);
}

.odd {
    background: #f7f7f7;
}
.even {
    background: #fff;
}

/* LIST */

.list table {
    border-collapse: collapse;
}
.list th, .list td {
    border-left: 1px solid #ddd;
}
.list th:hover, .list tr:hover {
    background: #b2d1ff;
}

